# DoS-Detection-Prototype

./: .gitattributes  .gitignore  README.md  docker-compose.yml  features_extractor.py
features/: features.csv  features_link.txt
model-implementation/: app.py  cvn.py  model.Dockerfile
model-implementation/model/: app.py  cvn.py  debug.py  requirements.txt  test.py
model-implementation/model/templates/: index.html
model-implementation/raw_window_data/: data_window_0.txt  data_window_1.txt  data_window_2.txt
model-implementation/templates/: index.html
offline-model-implementation/: cvn.py  main.py  offline-model-implementation.py  plateau.py  utils.py
online-component/: interface.Dockerfile  proxy.Dockerfile
online-component/config/: proxy.settings.toml
online-component/interface/: server.py
online-component/interface/templates/: index.html
online-component/proxy/src/: api.rs  main.rs  rate_limiter.rs
online-component/proxy/src/rate_limiter/: cache.rs  metrics.rs  multi_guard.rs
online_model/: Dockerfile
online_model/caching/: Cargo.toml
online_model/caching/src/: data.rs  main.rs
online_model/config/: proxy.settings.toml
online_model/interface/: requirements.txt  server.py
online_model/interface/templates/: index.html
online_model/proxy/: Cargo.toml  settings.toml
online_model/proxy/src/: api.rs  blocker.rs  cache.rs  config.rs  main.rs  metrics.rs  rate_limiter.rs  signals.rs  utils.rs
online_model/proxy/src/rate_limiter/: cache.rs  metrics.rs  multi_sliding_guard.rs
test-scripts/: simple-attack.py  slow-attack.py
