[package]
name = "proxy"
version = "0.1.0"
edition = "2021"


[dependencies]
salvo = { version = "0.65.1", features = ["proxy", "rustls", "logging"] }
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = "1.0.196"
toml = "0.8.8"
tokio-rustls = "0.25.0"
async-trait = "0.1.77"
futures = "0.3.30"
moka = { version = "0.12.5", features = ["sync"] }
